--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -23,6 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/google.accounts": "^0.0.15",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
