--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "ibm-watson": "^8.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
